// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Color Picker renders field disabled 1`] = `
<div>
  <div
    aria-labelledby="colorPicker_fieldDetails"
    class="form-group hide"
    data-field-name="colorPicker"
    tabindex="0"
  >
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker"
        style="height: 0px; margin: 0px; padding: 0px; visibility: hidden; width: 0px;"
        type="text"
        value="#000000"
      />
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              disabled=""
              style="background: rgb(0, 0, 0);"
              title="000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is 000000"
            class="form-control input-group-inset input-group-inset-before"
            disabled=""
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Field Color Picker renders field with helptext 1`] = `
<div>
  <div
    aria-labelledby="colorPicker_fieldDetails"
    class="form-group hide"
    data-field-name="colorPicker"
    tabindex="0"
  >
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker"
        style="height: 0px; margin: 0px; padding: 0px; visibility: hidden; width: 0px;"
        type="text"
        value="#000000"
      />
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              style="background: rgb(0, 0, 0);"
              title="000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is 000000"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="form-text"
    >
      Helptext
    </span>
    <span
      class="sr-only"
      id="colorPicker_fieldDetails"
    >
      Helptext
      <br />
    </span>
  </div>
</div>
`;

exports[`Field Color Picker renders field with label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="colorPicker"
  >
    <label
      aria-describedby="colorPicker_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      label
    </label>
    <div
      class="clay-color-picker"
    >
      <input
        name="colorPicker"
        style="height: 0px; margin: 0px; padding: 0px; visibility: hidden; width: 0px;"
        type="text"
        value="#000000"
      />
      <div
        class="input-group clay-color"
      >
        <div
          class="input-group-item input-group-item-shrink input-group-prepend"
        >
          <div
            class="input-group-text"
          >
            <button
              aria-label="Select a color"
              class="btn clay-color-btn dropdown-toggle"
              style="background: rgb(0, 0, 0);"
              title="000000"
              type="button"
            />
          </div>
        </div>
        <div
          class="input-group-item input-group-append"
        >
          <input
            aria-label="Color selection is 000000"
            class="form-control input-group-inset input-group-inset-before"
            type="text"
            value="000000"
          />
          <label
            class="input-group-inset-item input-group-inset-item-before"
          >
            #
          </label>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="form-text"
    >
      Helptext
    </span>
    <span
      class="sr-only"
      id="colorPicker_fieldDetails"
    >
      label
      <br />
      Helptext
      <br />
    </span>
  </div>
</div>
`;
